2010-06-29  Mario Carrion  <mcarrion@novell.com>

	* various.m4: Add atk dependency for Accessibility support. This
	shouldn't be a problem as GTK+ has an ATK dependency anyway. (Reworked
	patch r156659)

	r: toshok

2010-06-28  Andreia Gaita  <avidigal@novell.com>

	* utilities.m4: when using configure.gnu, don't call configure with $@,
	  options set there are not escaped and can break the build needlessly

2010-06-22  Andreia Gaita  <avidigal@novell.com>

	* curl.m4: use nss instead of openssl to be able to use existing store

2010-05-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* curl.m4: Make it an error to not be able to build embedded curl.

2010-05-24  Andreia Gaita  <avidigal@novell.com>

	* curl.m4: tweak curl configure options to not build unnecessary
	things that can potentially break the build on dev systems

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* curl.m4: Show configure failure reason for embedded curl.

	* chrome.m4: Add parenthesis around failure reasons to make configure output
	more readable.

2010-05-05  Chris Toshok  <toshok@ximian.com>

	* pal.m4: add hardcoded dbus-glib network service.

2010-04-28  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: remove ff36 bridge.
	using --define-variable=includetype=unstable on pkg-config for
	the ff3 bridge, we can get cflags that work for both libxul 1.9.1
	and 1.9.2, so ff3 now supports both.

2010-04-08  Andreia Gaita  <avidigal@novell.com>

	* build-configuration.m4: add build-only option to building mono

2010-04-08  Chris Toshok  <toshok@ximian.com>

	* chrome.m4: check for more chrome executables, and remove the
	python check since we aren't using python to sign crx files
	anymore.

2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* m4/curl.m4: move CUSTOM_SUBDIR_OPTION to utilities.m4
	* m4/utilities.m4: define m4_ifblank/m4_ifnblank helpers

2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* various.m4: move curl checks to curl.m4